CAMBIOS ESTILO FORMULARIOS

--- a/meetLink/templates/meetLink/contactos/contactos.html
+++ b/meetLink/templates/meetLink/contactos/contactos.html
@@ -97,7 +97,7 @@
                 </div>
             </div>
             {% empty %}
-            <p class="text-center text-black">Aún no hay grupos de contactos disponibles.</p>
+            <p class="text-center text-vacio">Aún no hay grupos de contactos disponibles.</p>
             {% endfor %}
         </div>
 
