--- a/meetLink/templates/meetLink/eventos/eventos.html
+++ b/meetLink/templates/meetLink/eventos/eventos.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             {% empty %}
-            <p class="text-center text-black">Aún no hay eventos disponibles.</p>
+            <p class="text-center text-vacio">Aún no hay eventos disponibles.</p>
             {% endfor %}
         </div>
 
