--- a/meetLink/templates/meetLink/recursos/presupuesto.html
+++ b/meetLink/templates/meetLink/recursos/presupuesto.html
@@ -1,7 +1,7 @@
 {% extends "meetLink/base.html" %}
 
 {% block contenido %}
-<div id="form" class="d-flex align-items-center justify-content-center" style="background-color: #85D0B2; min-height: 100vh;">
+<div id="form" class="d-flex align-items-center justify-content-center" style="min-height: 100vh;">
     <div id="form-card" class="p-5 bg-white rounded shadow" style="min-width: 350px; max-width: 600px;">
         <div class="content">
             <h3 class="mb-4 text-center">Presupuesto del Evento: {{ object.nombre }}</h3>
