--- a/meetLink/static/css/styles.css
+++ b/meetLink/static/css/styles.css
@@ -62,7 +62,10 @@ main {
     margin-left: var(--sidebar-width-collapsed);
 }
 
-
+.text-vacio {
+    color: var(--blanco);
+    font-size: 36px;
+}
 
 /*********************************! GLASSBOX - DIVS **********************************/
 
@@ -477,6 +480,9 @@ main {
     flex-grow: 1;
     height: max-content;
     min-height: 100vh;
+    background-image: url(https://images.unsplash.com/photo-1654425792251-8d3eaafc0315?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    overflow: hidden;
 }
 
 #form-card {
