--- a/meetLink/templates/meetLink/eventos/eventos_delete.html
+++ b/meetLink/templates/meetLink/eventos/eventos_delete.html
@@ -2,7 +2,7 @@
 
 {% block contenido %}
 
-<div id="form" class="d-flex align-items-center justify-content-center" style="background-color: #85D0B2;">
+<div id="form" class="d-flex align-items-center justify-content-center">
     <div id="form-card" class="p-5 bg-white rounded shadow">
        <h2>¿Estás seguro de que quieres eliminar este evento?</h2>
     <form method="post">
