--- a/meetLink/templates/meetLink/eventos/eventos_update.html
+++ b/meetLink/templates/meetLink/eventos/eventos_update.html
@@ -2,7 +2,7 @@
 
 {% block contenido %}
 
-<div id="form" class="d-flex align-items-center justify-content-center" style="background-color: #85D0B2;">
+<div id="form" class="d-flex align-items-center justify-content-center">
     <div id="form-card" class="p-5 bg-white rounded shadow">
         <div class="content">
             <h2 class="mb-4 text-center">Editar Evento</h2>
