--- a/meetLink/templates/meetLink/sesion/login.html
+++ b/meetLink/templates/meetLink/sesion/login.html
@@ -1,7 +1,7 @@
 {% extends "meetLink/base.html" %}
 
 {% block contenido %}
-<div id="form" class="d-flex align-items-center justify-content-center" style="height: 100vh; background-color: #85D0B2;">
+<div id="form" class="d-flex align-items-center justify-content-center" style="height: 100vh;">
     <div id="form-card" class="p-5 bg-white rounded shadow">
         <h2 class="mb-4 text-center">Iniciar Sesión</h2>
         <form method="post">
